resource: adopcion - endoints: pedido y aprobar - atualizacion swagger
